--- a/миры2.html
+++ b/миры2.html
@@ -6,7 +6,7 @@
             <p>-Ｂｌｏｘ Ｆｒｕｉｔｓ- </p>
             <a href="http://127.0.0.1:5500/index.html">Нᴀ ᴦᴧᴀʙную</a>
         </header>
-        <p>Вᴄᴇᴦо ʙо ʙᴄᴇᴧᴇнной ʙʟᴏx ꜰʀᴜɪᴛs ᴄущᴇᴄᴛʙуᴇᴛ 3 ʍиᴩᴀ.ᴋᴀждый из них униᴋᴀᴧᴇн,ᴀ ᴛᴀᴋжᴇ ʙ ᴋᴀждоʍ из ʍиᴩоʙ ᴇᴄᴛь ᴄʙои оᴄᴄобᴇнноᴄᴛи.хᴛᴇᴧи бы узнᴀᴛь боᴧьɯᴇ? ᴧиᴄᴛᴀйᴛᴇ ʙниз</p>
+        <p>Вᴄᴇᴦо ʙо ʙᴄᴇᴧᴇнной ʙʟᴏx ꜰʀᴜɪᴛs ᴄущᴇᴄᴛʙуᴇᴛ 3 ʍиᴩᴀ.Кᴀждый из них униᴋᴀᴧᴇн,ᴀ ᴛᴀᴋжᴇ ʙ ᴋᴀждоʍ из ʍиᴩоʙ ᴇᴄᴛь ᴄʙои оᴄᴄобᴇнноᴄᴛи.Хоᴛᴇᴧи бы узнᴀᴛь боᴧьɯᴇ? Лиᴄᴛᴀйᴛᴇ ʙниз</p>
         <h1>Миры</h1>
         <h2>1 Мир</h2>
         <img src="First_Sea_in_Blox_Fruit_29.webp">
@@ -27,7 +27,7 @@
             <br/>---Город фонтанов. Требуемый начальный уровень: 625. Враги: Пират Галеры, Капитан Галеры. Боссы: Киборг</p>
             <p>Валюта и её применения</p>  
             <img class="money" src="BeliIcon.webp">
-            <p>В первом мире на данный момент есть только 1 Валюта,конечно же это -<span>Белли</span>-.Что же можно сделать с валютой?<br/>1-Можно купить мечи,оружия для легкого прохождения игры <br/>2-Можно купить Корабли для перемещения по островам <br/>3-Купить способности по типу Воли наблюдения,воли вооружения двойных прыжков,а также внезапный шаг </p>
+            <p>В первом мире на данный момент есть только 1 Валюта,конечно же это -<span>Белли</span>-.Что же можно сделать с валютой?<br/>1-Можно купить мечи,оружия для легкого прохождения игры <br/>2-Можно купить Корабли для перемещения по островам <br/>3-Купить способности по типу Воли наблюдения,воли вооружения,двойных прыжков,а также внезапный шаг </p>
             <p>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
             <h2>2 Мир</h2>
             <p class="li">Как же получить доступ ко 2 Миру?</p>
